# shadowproxy_gui

./: .gitignore  Cargo.toml  README.md  interceptor.py  log4rs.yaml
src/: json_thread_listner.rs  lib.rs  main.rs  utils.rs
src/servers/: dorklistiner.rs  json_thread_listner.rs  mod.rs
src/utils/: converters.rs  mod.rs  structs.rs
