[package]
name = "shadowproxy_gui"
version = "0.1.2"
edition = "2021"

[dependencies]
brotli = "7.0.0"
eframe = "0.22"
egui = "0.22"
egui_extras = "0.31.0"
env_logger = "0.11.6"
flate2 = "1.0.35"
hyper = "1.6.0"
log = "0.4.26"
log4rs = "1.3.0"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"]}
url = "2.5.4"
warp = "0.3.7"

